--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,11 @@ body {
 .App {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  /*position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 0;*/
   display: flex;
   justify-content: center;
   flex-direction: column;
