my fourth attempt to create a multipage

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  page-break-after: always;
 }
 
 h1 {
